# conreality-hal

./: .gitignore  Makefile.am  README.rst  TODO.rst  configure.ac  version.h.in
dummy-camera/: .gitignore  .json  Makefile.am  README.rst  main.cc
dummy-control/: .gitignore  .json  Makefile.am  README.rst
dummy-gps/: .gitignore  .json  Makefile.am  README.rst  main.cc
dummy-mic/: .gitignore  .json  Makefile.am  README.rst  main.cc
dummy-tag/: .gitignore  .json  Makefile.am  README.rst  main.cc
